--- a/index.html
+++ b/index.html
@@ -87,7 +87,9 @@
                             <a href="" class="btn-site">
                                 VỀ  DAICHI JAPAN
                                 <span>
-                                    <img src="./assets/images/arrow-right-1.svg" alt="">
+                                    <svg width="32" height="31" viewBox="0 0 32 31" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M4.375 15.5L27.625 15.5M27.625 15.5L18.5833 5.8125M27.625 15.5L18.5833 25.1875" stroke="#FE9203" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                    </svg>
                                 </span>
                             </a>
                         </div>
@@ -852,7 +854,9 @@
                             <a href="" class="btn-site">
                                 Xem tất cả
                                 <span>
-                                    <img src="./assets/images/arrow-right-1.svg" alt="">
+                                    <svg width="32" height="31" viewBox="0 0 32 31" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M4.375 15.5L27.625 15.5M27.625 15.5L18.5833 5.8125M27.625 15.5L18.5833 25.1875" stroke="#FE9203" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                    </svg>
                                 </span>
                             </a>
                         </div>
@@ -1011,7 +1015,9 @@
                             <a href="" class="btn-site">
                                 Xem tất cả
                                 <span>
-                                    <img src="./assets/images/arrow-right-1.svg" alt="">
+                                    <svg width="32" height="31" viewBox="0 0 32 31" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M4.375 15.5L27.625 15.5M27.625 15.5L18.5833 5.8125M27.625 15.5L18.5833 25.1875" stroke="#FE9203" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                    </svg>
                                 </span>
                             </a>
                         </div>
@@ -1170,7 +1176,9 @@
                             <a href="" class="btn-site">
                                 Xem tất cả
                                 <span>
-                                    <img src="./assets/images/arrow-right-1.svg" alt="">
+                                    <svg width="32" height="31" viewBox="0 0 32 31" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                        <path d="M4.375 15.5L27.625 15.5M27.625 15.5L18.5833 5.8125M27.625 15.5L18.5833 25.1875" stroke="#FE9203" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                        </svg>
                                 </span>
                             </a>
                         </div>
@@ -1277,12 +1285,217 @@
 Daiichi sẵn sàng trả lời mọi câu hỏi và lắng nghe ý kiến của các bạn!
                     </p>
                 </div>
-
+                <div class="row mt-5">
+                    <div class="col-12 col-sm-6 col-lg-3">
+                        <div class="service__item">
+                            <div class="thumb">
+                                <a href="">
+                                    <img src="./assets/images/service-img-01.png" alt="">
+                                </a>
+                            </div>
+                            <div class="desc">
+                                <h3>TITTLE</h3>
+                                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sedcedy. </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-sm-6 col-lg-3">
+                        <div class="service__item mt-lg-5 mt-0">
+                            <div class="thumb">
+                                <a href="">
+                                    <img src="./assets/images/service-img-02.png" alt="">
+                                </a>
+                            </div>
+                            <div class="desc">
+                                <h3>TITTLE</h3>
+                                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sedcedy. </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-sm-6 col-lg-3">
+                        <div class="service__item">
+                            <div class="thumb">
+                                <a href="">
+                                    <img src="./assets/images/service-img-04.png" alt="">
+                                </a>
+                            </div>
+                            <div class="desc">
+                                <h3>TITTLE</h3>
+                                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sedcedy. </p>
+                            </div>
+                        </div>
+                    </div>
+                    <div class="col-12 col-sm-6 col-lg-3">
+                        <div class="service__item mt-lg-5 mt-0">
+                            <div class="thumb">
+                                <a href="">
+                                    <img src="./assets/images/service-img-03.png" alt="">
+                                </a>
+                            </div>
+                            <div class="desc">
+                                <h3>TITTLE</h3>
+                                <p>Lorem ipsum dolor sit amet, consectetuer adipiscing elit, sedcedy. </p>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+                <div class="row">
+                    <div class="col-12">
+                        <div class="section__title text-center mt-5">
+                            <h2 class="color-blue-text text-center text-white">THÔNG TIN LIÊN Hệ</h2>
+                        </div>
+                    </div>
+                    <div class="col-12">
+                        <div class="wrap__form-contact">
+                            <div class="form-contact">
+                                <form action="">
+                                    <div class="form-row">
+                                        <div class="col-12 col-md-6 form-group">
+                                            <label for="name" class="form-check-label">Họ và tên<span>*</span></label>
+                                            <input id="name" class="form-control" type="text" placeholder="Nhập tên của bạn">
+                                        </div>
+                                        <div class="col-12 col-md-6 form-group">
+                                            <label for="phone" class="form-check-label">Số điện thoại<span>*</span></label>
+                                            <input id="phone" class="form-control" type="text" placeholder="Nhập số điện thoại">
+                                        </div>
+                                        <div class="col-12 col-md-6 form-group">
+                                            <label for="select" class="form-check-label">Nhu cầu của bạn<span>*</span></label>
+                                            <select name="" id="select" class="form-control">
+                                                <option value="">Tư vấn du học</option>
+                                                <option value="">Tư vấn du học</option>
+                                                <option value="">Tư vấn du học</option>
+                                            </select>
+                                        </div>
+                                        <div class="col-12 col-md-6 form-group">
+                                            <label for="mail" class="form-check-label">Email</label>
+                                            <input id="mail" class="form-control" type="email" placeholder="Nhập Email">
+                                        </div>
+                                        <div class="col-12  form-group">
+                                            <label for="content" class="form-check-label">Nội dung tin nhắn</label>
+                                            <textarea  name="" id="content"  class="form-control" placeholder="Nhập nội dung tin nhắn"></textarea>
+                                        </div>
+                                        <div class="col-12 form-group ">
+                                            <label for="myfile" class="button-file">
+                                                <img src="./assets/images/file.svg" alt="">
+                                                Tệp đính kèm
+                                            </label>
+                                            <input type="file" id="myfile" name="myfile" class="form-control-file"> 
+                                        </div>
+                                        <div class="col-12 col-md-8 mt-3 form-group">
+                                            <label for="code" class="form-check-label">Mã chống spam:</label>
+                                            <div class="wrap__enter-code d-flex align-items-center">
+                                                <input type="text" class="enter-code form-control" id="code">
+                                                <img src="./assets/images/code-spam.png" alt="">
+                                                <button type="button" class="reset-code">
+                                                    <img src="./assets/images/reset.svg" alt="">
+                                                </button>
+                                            </div>
+                                        </div>
+                                        <div class="col-12 col-md-4 form-group wrap-bt-sumit">
+                                            <button type="submit" class="btn-site --submit">
+                                                Gửi
+                                                <span>
+                                                    <svg width="32" height="31" viewBox="0 0 32 31" fill="none" xmlns="http://www.w3.org/2000/svg">
+                                                        <path d="M4.375 15.5L27.625 15.5M27.625 15.5L18.5833 5.8125M27.625 15.5L18.5833 25.1875" stroke="#FE9203" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
+                                                    </svg>
+                                                </span>
+                                            </button>
+                                        </div>
+                                    </div>
+                                </form>
+                            </div>
+                            <div class="form__img">
+                                <img src="./assets/images/contact-img-01.jpg" alt="">
+                            </div>
+                        </div>
+                    </div>
+                </div>
             </div>
         </section>
     </main>
 
-    <footer></footer>
+    <footer>
+        <div class="container">
+            <div class="row">
+                <div class="col-12 col-lg-6 pt-5 pb-lg-5">
+                    <h2 class="footer__block-title">LIÊN HỆ</h2>
+                    <div class="footer__info mb-3">
+                        <h4>
+                            <img src="./assets/images/call.svg" alt="">Hotline:
+                        </h4>
+                        <ul>
+                            <li>
+                                033.2279.666 (zalo)
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="footer__info mb-3">
+                        <h4>
+                            <img src="./assets/images/building.svg" alt="">Văn phòng:
+                        </h4>
+                        <ul>
+                            <li>
+                                Liền kế 13, C37 Bộ công an, Tố Hữu, Trung Văn, Nam Từ Liêm, Hà Nội.
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="footer__info mb-3">
+                        <h4>
+                            <img src="./assets/images/location-footer.svg" alt="">Trung tâm Đào tạo:
+                        </h4>
+                        <ul>
+                            <li>
+                                Cơ sở Hà Nội: 953 Ba La, Phú Lãm, Hà Đông, Hà Nội. 
+                            </li>
+                            <li>
+                                Cơ sở Đà Nẵng: 8 Nguyễn Sinh Sắc, Hoà Minh, Liên Chiểu, Đà Nẵng.
+                            </li>
+                            <li>
+                                Cơ sở Hồ Chí Minh: 51 An Dương Vương, An Lạc A, Bình Tân, Tp.HCM. 
+                            </li>
+                        </ul>
+                    </div>
+                    <div class="footer__info">
+                        <h4>
+                            <img src="./assets/images/global.svg" alt="">Social:
+                        </h4>
+                        <ul class="social__list d-flex align-items-center pt-2">
+                            <li>
+                                <a href=""><img src="./assets/images/Google-Original.svg" alt=""></a>
+                            </li>
+                            <li>
+                                <a href=""><img src="./assets/images/Facebook-Original.svg" alt=""></a>
+                            </li>
+                            <li>
+                                <a href=""><img src="./assets/images/YouTube-Original.svg" alt=""></a>
+                            </li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="col-12 col-lg-6 pt-5 pb-5">
+                    <h2 class="footer__block-title">BẢN ĐỒ</h2>
+                    <div class="footer__map">
+                        <iframe src="https://www.google.com/maps/embed?pb=!1m18!1m12!1m3!1d3725.0455641654075!2d105.80200491485373!3d20.990810586018956!2m3!1f0!2f0!3f0!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x3135acbfc70bca8f%3A0x2c95742078812bcd!2zMTUgxJAuIE5ndXnhu4VuIFhp4buDbiwgVGhhbmggWHXDom4gTmFtLCBUaGFuaCBYdcOibiwgSMOgIE7hu5lpIDEyMDMyMiwgVmnhu4d0IE5hbQ!5e0!3m2!1svi!2s!4v1672764646098!5m2!1svi!2s" width="600" height="450" style="border:0;" allowfullscreen="" loading="lazy" referrerpolicy="no-referrer-when-downgrade"></iframe>
+                    </div>
+                </div>
+            </div>
+        </div>
+        <div class="wrap__copyright">
+            <div class="container">
+                <div class="__inner d-flex justify-content-between align-items-center">
+                    <p>Copyright © 2022 Daiichi Japan Design by Vuasoft</p>
+                    <ul>
+                        <li>
+                            <a href="">Điều khoản sử dụng</a>
+                        </li>
+                        <li>
+                            <a href="">Chính sách</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <script src="./assets/js/jquery-3.6.3.min.js"></script>
     <script src="./assets/swiper-slider/swiper-bundle.min.js"></script>
