--- a/index.html
+++ b/index.html
@@ -16,6 +16,7 @@
     <!-- swiper slider -->
 
     <link rel="stylesheet" href="assets/css/style.css" type="text/css">
+    <link rel="stylesheet" href="assets/css/responsive.css" type="text/css">
 
 </head>
 
