--- a/xuat-khau-lao-dong.html
+++ b/xuat-khau-lao-dong.html
@@ -66,7 +66,7 @@
             <div class="__thumb"></div>
             <div class="__desc">
                <div class="container">
-                    <h1>XUẤT KHẨU LAO ĐỘNG NHẬT BẢN
+                    <h1 class="title__page">XUẤT KHẨU LAO ĐỘNG NHẬT BẢN
                         <span>THÔNG TIN TUYỂN DỤNG</span>
                     </h1>
                     <p>Với đa dạng các nghành nghề để cho phù hợp với từng bạn như: gia công cơ khí, hàn xì, chế tạo động cơ, sơn, chế biến thực phẩm, chế biến thủy hải sản, nông nghiệp, vệ sinh tòa nhà ....</p>
