--- a/bai-viet.html
+++ b/bai-viet.html
@@ -5,7 +5,7 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Chi tiết thông tin tuyển dụng</title>
+    <title>Chi tiết bài viết</title>
 
     <!-- bootstrap -->
     <link rel="stylesheet" href="./assets/css/bootstrap.min.css" type="text/css">
@@ -66,60 +66,15 @@
             <div class="row pt-5 pb-5">
                 <div class="col-12 col-lg-8">
                     <div class="wrap-content__detail pt-3">
-                        <div class="row">
-                            <div class="col-12 col-md-4 col-lg-5">
-                                <div class="detail__thumb is-new">
-                                    <img src="./assets/images/order-img-03.jpg" alt="">
-                                </div>
+                        <div class="content-page__detail mt-0 pt-0 border-0">
+                            <h1 class="title__page">TITLE BÀI VIẾT</h1>
+                            <div class="wrap__share-fb border-bottom border-top d-flex align-items-center justify-content-between">
+                                <p>Ngày đăng 15/12/2022</p>
+                                <a href="">
+                                    Chia sẻ
+                                    <img src="./assets/images/Facebook-Original.svg" alt="">
+                                </a>
                             </div>
-                            <div class="col-12 col-md-8 col-lg-7">
-                                <div class="detail__name">
-                                    <h1 class="title__page">ĐƠN HÀNG MAY TỈNH NIIGATA</h1>
-                                    <span class="position color-orange-text">THỰC TẬP SINH</span>
-                                    <div class="wrap__share-fb border-bottom d-flex align-items-center justify-content-between">
-                                        <span>
-                                            <img src="./assets/images/icon-number.svg" alt="">
-                                            120,000
-                                        </span>
-                                        <a href="">
-                                            Chia sẻ
-                                            <img src="./assets/images/Facebook-Original.svg" alt="">
-                                        </a>
-                                    </div>
-                                    <ul class="more-info__list --detail pr-0">
-                                        <li>
-                                            <p class="__icon">
-                                                <img src="./assets/images/Profile.svg" alt="">
-                                                Số lượng:
-                                            </p>
-                                            <span>5 Nam - 2 Nữ (Độ tuổi 22-36)</span>
-                                        </li>
-                                        <li>
-                                            <p class="__icon">
-                                                <img src="./assets/images/Calendar.svg" alt="">
-                                                Lịch phỏng vấn:
-                                            </p>
-                                            <span>10/1/2023</span>
-                                        </li>
-                                        <li>
-                                            <p class="__icon">
-                                                <img src="./assets/images/Work.svg" alt="">
-                                                Công việc:                         
-                                            </p>
-                                            <span>Công nhân</span>
-                                        </li>
-                                        <li>
-                                            <p class="__icon">
-                                                <img src="./assets/images/Location.svg" alt="">
-                                                Địa điểm:                       
-                                            </p>
-                                            <span>Tokyo</span>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="content-page__detail">
                             <p>
                                 Đi nhật nên chọn đơn hàng nào, chi phí xuất khẩu lao động Nhật Bản là câu hỏi đang được rất nhiều lao động quan tâm, xkld nhật bản ngành may mặc là sự lựa chọn cho e câu hỏi trên với chi phí cực kỳ thấp so với ngành khác, lương cao, nhiều việc làm thêm, hiện tại công ty đang hợp tác với nhiều tập đoàn lớn tại Nhật Bản
                             </p>
@@ -135,63 +90,90 @@
                         </div>
                     </div>
                     <div class="contact-part__page">
-                        <h3 class="__title">NỘP HỒ SƠ ỨNG TUYỂN</h3>
-                        <p class="__desc">Vui lòng điền đầy đủ thông tin của bạn</p>
-                        <form action="">
-                            <div class="form-row">
-                                <div class="col-12 col-md-6 form-group">
-                                    <label for="name" class="form-check-label">Họ và tên<span>*</span></label>
-                                    <input id="name" class="form-control" type="text" placeholder="Nhập tên của bạn">
-                                </div>
-                                <div class="col-12 col-md-6 form-group">
-                                    <label for="phone" class="form-check-label">Số điện thoại<span>*</span></label>
-                                    <input id="phone" class="form-control" type="text" placeholder="Nhập số điện thoại">
-                                </div>
-                                <div class="col-12 col-md-6 form-group">
-                                    <label for="select" class="form-check-label">Nhu cầu của bạn<span>*</span></label>
-                                    <select name="" id="select" class="form-control">
-                                        <option value="">Tư vấn du học</option>
-                                        <option value="">Tư vấn du học</option>
-                                        <option value="">Tư vấn du học</option>
-                                    </select>
-                                </div>
-                                <div class="col-12 col-md-6 form-group">
-                                    <label for="mail" class="form-check-label">Email</label>
-                                    <input id="mail" class="form-control" type="email" placeholder="Nhập Email">
-                                </div>
-                                <div class="col-12  form-group">
-                                    <label for="content" class="form-check-label">Nội dung tin nhắn</label>
-                                    <textarea  name="" id="content"  class="form-control" placeholder="Nhập nội dung tin nhắn"></textarea>
-                                </div>
-                                <div class="col-12 form-group ">
-                                    <label for="myfile" class="button-file">
-                                        <img src="./assets/images/file.svg" alt="">
-                                        Tệp đính kèm
-                                    </label>
-                                    <input type="file" id="myfile" name="myfile" class="form-control-file"> 
-                                </div>
-                                <div class="col-12 col-md-8 mt-3 form-group">
-                                    <label for="code" class="form-check-label">Mã chống spam:</label>
-                                    <div class="wrap__enter-code d-flex align-items-center">
-                                        <input type="text" class="enter-code form-control" id="code">
-                                        <img src="./assets/images/code-spam.png" alt="">
-                                        <button type="button" class="reset-code">
-                                            <img src="./assets/images/reset.svg" alt="">
-                                        </button>
+                        <h3 class="__title">TIN TỨC LIÊN QUAN</h3>
+                        <div class="row mt-5 row-gap-ct">
+                            <div class="col-12 col-md-6 col-lg-6 col-xl-4">
+                                <div class="order__item new__item new__related">
+                                    <div class="thumb">
+                                        <a href="#">
+                                            <img src="./assets/images/new-img-01.jpg" alt="">
+                                        </a>
+                                    </div>
+                                    <div class="title">
+                                        <h3>
+                                            <a href="#">Tuyển sinh du học Nhật Bản kỳ tháng 10/2021</a>
+                                        </h3>
+                                    </div>
+                                    <p class="desc">
+                                        Cùng với kỳ tháng 4, kỳ tháng 10 là kỳ tuyển sinh chính của trường Nhật Bản. Kỳ này có thời gian học là 1 năm 6 tháng, thu hút đông đảo học sinh, sinh viên vừa... thu hút đông đảo học sinh, sinh viên vừa...
+                                    </p>
+                                    <div class="new__item_bt mt-3 d-flex align-items-center justify-content-between">
+                                        <div class="new__item-calender">
+                                            <img src="./assets/images/calendar-black.svg" alt="">
+                                            12/12/2022
+                                        </div>
+                                        <div class="view__number">
+                                            <img src="./assets/images/Show.svg" alt="">
+                                            123
+                                        </div>
                                     </div>
                                 </div>
-                                <div class="col-12 col-md-4 form-group wrap-bt-sumit">
-                                    <button type="submit" class="btn-site --submit">
-                                        Gửi
-                                        <span>
-                                            <svg width="32" height="31" viewBox="0 0 32 31" fill="none" xmlns="http://www.w3.org/2000/svg">
-                                                <path d="M4.375 15.5L27.625 15.5M27.625 15.5L18.5833 5.8125M27.625 15.5L18.5833 25.1875" stroke="#FE9203" stroke-width="2" stroke-linecap="round" stroke-linejoin="round"/>
-                                            </svg>
-                                        </span>
-                                    </button>
+                            </div>
+                            <div class="col-12 col-md-6 col-lg-6 col-xl-4">
+                                <div class="order__item new__item new__related">
+                                    <div class="thumb">
+                                        <a href="#">
+                                            <img src="./assets/images/new-img-02.jpg" alt="">
+                                        </a>
+                                    </div>
+                                    <div class="title">
+                                        <h3>
+                                            <a href="#">Tuyển sinh du học Nhật Bản kỳ tháng 10/2021</a>
+                                        </h3>
+                                    </div>
+                                    <p class="desc">
+                                        Cùng với kỳ tháng 4, kỳ tháng 10 là kỳ tuyển sinh chính của trường Nhật Bản. Kỳ này có thời gian học là 1 năm 6 tháng, thu hút đông đảo học sinh, sinh viên vừa... thu hút đông đảo học sinh, sinh viên vừa...
+                                    </p>
+                                    <div class="new__item_bt mt-3 d-flex align-items-center justify-content-between">
+                                        <div class="new__item-calender">
+                                            <img src="./assets/images/calendar-black.svg" alt="">
+                                            12/12/2022
+                                        </div>
+                                        <div class="view__number">
+                                            <img src="./assets/images/Show.svg" alt="">
+                                            123
+                                        </div>
+                                    </div>
                                 </div>
                             </div>
-                        </form>
+                            <div class="col-12 col-md-6 col-lg-6 col-xl-4">
+                                <div class="order__item new__item new__related">
+                                    <div class="thumb">
+                                        <a href="#">
+                                            <img src="./assets/images/new-img-03.jpg" alt="">
+                                        </a>
+                                    </div>
+                                    <div class="title">
+                                        <h3>
+                                            <a href="#">Tuyển sinh du học Nhật Bản kỳ tháng 10/2021</a>
+                                        </h3>
+                                    </div>
+                                    <p class="desc">
+                                        Cùng với kỳ tháng 4, kỳ tháng 10 là kỳ tuyển sinh chính của trường Nhật Bản. Kỳ này có thời gian học là 1 năm 6 tháng, thu hút đông đảo học sinh, sinh viên vừa... thu hút đông đảo học sinh, sinh viên vừa...
+                                    </p>
+                                    <div class="new__item_bt mt-3 d-flex align-items-center justify-content-between">
+                                        <div class="new__item-calender">
+                                            <img src="./assets/images/calendar-black.svg" alt="">
+                                            12/12/2022
+                                        </div>
+                                        <div class="view__number">
+                                            <img src="./assets/images/Show.svg" alt="">
+                                            123
+                                        </div>
+                                    </div>
+                                </div>
+                            </div>
+                        </div>
                     </div>
                 </div>
                 <div class="col-12 col-lg-4">
@@ -201,7 +183,7 @@
                             <h4>NHẬN TƯ VẤN</h4>
                             <span>033-2279-666</span>
                             <p>Hoặc nộp hồ sơ trực tuyến</p>
-                            <a href="#" class="btn-site aside-btn " data-toggle="modal" data-target="#exampleModal">ỨNG TUYỂN</a>
+                            <a href="#" class="btn-site aside-btn" data-toggle="modal" data-target="#exampleModal">ỨNG TUYỂN</a>
                         </div>
                         <h3 class="aside__title-box text-uppercase">
                             DANH MỤC
@@ -479,7 +461,7 @@
         </div>
     </footer>
 
-    <!-- Modal -->
+     <!-- Modal -->
     <div class="modal fade" id="exampleModal" tabindex="-1" role="dialog" aria-labelledby="exampleModalLabel" aria-hidden="true">
         <div class="modal-dialog modal-dialog-centered modal-contact" role="document">
         <div class="modal-content">
